--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -8,7 +8,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Detalhes do chamado</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous" />
     <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
@@ -59,51 +60,105 @@
             transition: opacity 0.5s ease-in-out;
         }
 
-    /* Estilos para o modal */
-    #modal {
-        background-color: white;
-        z-index: 1041;
-        width: 90%;
-        max-width: 800px;
-        border-radius: 8px;
-        padding: 20px;
-        transform: scale(0.7);
-        transition: transform 0.5s ease-in-out;
-        font-size: 16px; /* Tamanho do texto */
-    }
-
-    @media (min-width: 768px) {
+        /* Estilos para o modal */
         #modal {
-            width: 60%;
+            background-color: white;
+            z-index: 1041;
+            width: 90%;
+            max-width: 800px;
+            border-radius: 8px;
+            padding: 20px;
+            transform: scale(0.7);
+            transition: transform 0.5s ease-in-out;
+            font-size: 16px;
+            /* Tamanho do texto */
         }
-    }
 
-    .modal-content {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-    }
+        @media (min-width: 768px) {
+            #modal {
+                width: 60%;
+            }
+        }
 
-    .modal-content .modal-info {
-        display: flex;
-        gap: 20px;
-        margin-bottom: 15px;
-    }
+        .modal-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
 
-    .modal-content .modal-info .info-group {
-        flex: 1 1 45%;
-    }
+        .modal-content .modal-info {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 15px;
+        }
 
-    .modal-content .modal-info p {
-        margin: 0;
-    }
+        .modal-content .modal-info .info-group {
+            flex: 1 1 45%;
+        }
 
+        .modal-content .modal-info p {
+            margin: 0;
+        }
+        
+    #modal-alert {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1050;
+    transition: transform 0.5s ease-in-out;
+    background-color: #fff; /* Alterado para branco */
+    width: 300px;
+    max-width: 90%;
+    padding: 1.2rem;
+    border-radius: .5rem;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Adicionado sombra */
+}
 
+.modal-alert-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+}
+
+.modal-alert-body {
+    margin-bottom: 1rem;
+}
+
+.modal-alert-footer {
+    margin-top: 2rem;
+}
+
+#modal-alert.hide-modal-alert {
+    opacity: 0;
+    pointer-events: none; /* Impede cliques quando oculto */
+}
     </style>
 </head>
 
 <body class="sb-nav-fixed">
     <div id="fade">
+        
+                <!-- Modal de alerta -->
+                <div id="modal-alert" class="hide-modal-alert">
+                    <div class="modal-alert-header">
+                        Confirmação
+                    </div>
+                    <div class="modal-alert-body">
+                        Deseja finalizar esse chamado?
+                    </div>
+                    <div class="modal-alert-footer">
+                        <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
+                            <input type="hidden" name="novoStatus" value="finalizado" />
+                            <button type="submit" class="btn btn-primary">Sim</button>
+                        </form>
+                        <button id="modal-alert-nao" class="btn btn-primary">Não</button>
+                    </div>
+                </div>
+
         <div id="modal">
             <div class="modal-header">
                 <h2>Detalhes do chamado</h2>
@@ -143,7 +198,7 @@
                             <p th:text="${chamado.status}"></p>
                         </div>
                     </div>
-    
+
                     <!-- TIPO INFORMATICA -->
                     <div th:if="${chamado.tipoDeChamado == 1}">
                         <div class="modal-info">
@@ -161,7 +216,7 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <!-- TIPO FINANCEIRO -->
                     <div th:if="${chamado.tipoDeChamado == 2}">
                         <div class="modal-info">
@@ -179,7 +234,7 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <!-- TIPO JURIDICO -->
                     <div th:if="${chamado.tipoDeChamado == 3}">
                         <div class="modal-info">
@@ -202,23 +257,32 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    
+
                     <div th:if="${chamado.status == 'aberto'}">
                         <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
                             <input type="hidden" name="novoStatus" value="andamento" />
-                            <button type="submit" class="btn btn-primary" style="background-color: rgb(0, 255, 132);">Atender</button>
+                            <button type="submit" class="btn btn-primary"
+                                style="background-color: rgb(0, 255, 132);">Atender</button>
                         </form>
                     </div>
                     <div th:if="${chamado.status == 'andamento'}">
                         <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
-                            <input type="hidden" name="novoStatus" value="finalizado" />
-                            <button type="submit" class="btn btn-primary" style="background-color: rgb(255, 0, 0);">Finalizar</button>
+                            <div class="enviar-mensagem"> <label>Responder Chamado</label>
+                                <input type="text" placeholder="enviar" value="">
+                                <button type="submit" class="btn btn-primary"
+                                    style="background-color: rgb(55, 255, 0); ">enviar</button>
+                            </div>
+
+                            
                         </form>
-                    </div>
+                        <div class="finalizar"> 
+                            <button class="btn btn-primary"  id="open-modal-alert" style="background-color: rgb(255, 0, 0);">Finalizar</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -348,16 +412,19 @@
                                     <td th:text="${chamado.titulo}">Título</td>
                                     <td th:text="${chamado.descricao}">Descrição</td>
                                     <td>
-                                        <span th:classappend="${chamado.status == 'aberto' ? 'badge bg-success' : (chamado.status == 'andamento' ? 'badge bg-primary' : (chamado.status == 'finalizado' ? 'badge bg-danger' : 'badge bg-secondary'))}">
+                                        <span
+                                            th:classappend="${chamado.status == 'aberto' ? 'badge bg-success' : (chamado.status == 'andamento' ? 'badge bg-primary' : (chamado.status == 'finalizado' ? 'badge bg-danger' : 'badge bg-secondary'))}">
                                             <span th:text="${chamado.status}"></span>
                                         </span>
                                     </td>
-                                    <div  th:if="${chamado.status == 'finalizado'}">
+                                    <div th:if="${chamado.status == 'finalizado'}">
                                         <td>00:00:00:00</td>
                                     </div>
 
-                                    <div th:if="${chamado.status != 'finalizado'}"><td class="dataAberturaTable" th:text="${chamado.dataAbertura}"></td></div>
-                                
+                                    <div th:if="${chamado.status != 'finalizado'}">
+                                        <td class="dataAberturaTable" th:text="${chamado.dataAbertura}"></td>
+                                    </div>
+
                                     <td>
                                         <a th:href="@{/detalhes/{id}(id=${chamado.id})}">Analisar</a>
                                     </td>
@@ -383,7 +450,31 @@
         </div>
     </div>
     </div>
+    <script>
+document.addEventListener('DOMContentLoaded', function () {
+    const openModalButton = document.querySelector("#open-modal-alert");
+    const closeModalButton = document.querySelector("#modal-alert-nao");
+    const modalAlert = document.querySelector("#modal-alert");
 
+    const toggleModalAlert = () => {
+        modalAlert.classList.toggle("hide-modal-alert");
+        document.body.classList.toggle("modal-open"); // Adiciona classe para desativar scroll de fundo
+    };
+
+    // Event listeners para abrir e fechar o modal de alerta
+    openModalButton.addEventListener("click", toggleModalAlert);
+    closeModalButton.addEventListener("click", toggleModalAlert);
+
+    // Event listener para o botão "Sim" do modal de alerta
+    const modalAlertSimButton = document.querySelector("#modal-alert-sim");
+    modalAlertSimButton.addEventListener("click", function () {
+        // Aqui você pode adicionar a lógica para finalizar o chamado
+        console.log("Chamado finalizado!");
+        // Exemplo: window.location.href = "/finalizarChamado";
+        toggleModalAlert(); // Fecha o modal após finalizar
+    });
+});
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
@@ -429,29 +520,29 @@
             }
         }
     </script>
-       <script>
+    <script>
         document.addEventListener("DOMContentLoaded", function () {
-    const modal = document.getElementById("modal");
-    const fade = document.getElementById("fade");
-    const closeModalButtons = document.querySelectorAll("#close-modal");
-    const exitButton = document.getElementById("exit-modal");
+            const modal = document.getElementById("modal");
+            const fade = document.getElementById("fade");
+            const closeModalButtons = document.querySelectorAll("#close-modal");
+            const exitButton = document.getElementById("exit-modal");
 
-    fade.style.opacity = 1;
-    modal.style.transform = "scale(1)";
+            fade.style.opacity = 1;
+            modal.style.transform = "scale(1)";
 
-    closeModalButtons.forEach(button => {
-        button.addEventListener("click", () => {
-            fade.style.opacity = 0;
-            setTimeout(() => {
-                fade.style.display = "none";
-            }, 500);
+            closeModalButtons.forEach(button => {
+                button.addEventListener("click", () => {
+                    fade.style.opacity = 0;
+                    setTimeout(() => {
+                        fade.style.display = "none";
+                    }, 500);
+                });
+            });
+
+            exitButton.addEventListener("click", () => {
+                window.location.href = "/consultar";
+            });
         });
-    });
-
-    exitButton.addEventListener("click", () => {
-        window.location.href = "/consultar";
-    });
-});
     </script>
 
     <script>window.addEventListener('DOMContentLoaded', event => {
@@ -472,46 +563,46 @@
 
         });
     </script>
-<script>
-    // Formatar a data de abertura
-    document.addEventListener('DOMContentLoaded', function () {
-        const dataAbertura = document.getElementById('dataAbertura');
-        const data = new Date(dataAbertura.textContent);
-        const options = { day: 'numeric', month: 'numeric', year: 'numeric' };
-        const dataFormatada = data.toLocaleDateString('pt-BR', options);
-        dataAbertura.textContent = dataFormatada;
-    });
-</script>
-<script>
-    // Calcular tempo decorrido desde a criação para cada elemento
-    document.addEventListener('DOMContentLoaded', function () {
-        const dataAberturaTableElements = document.querySelectorAll('.dataAberturaTable');
-
-        dataAberturaTableElements.forEach(element => {
-            const dataHoraCriacao = new Date(element.textContent);
-
-            const diff = new Date() - dataHoraCriacao;
-            const segundos = Math.floor(diff / 1000);
-            const minutos = Math.floor(segundos / 60);
-            const horas = Math.floor(minutos / 60);
-            const dias = Math.floor(horas / 24);
-
-            let tempoDecorrido = '';
-
-            if (dias > 0) {
-                tempoDecorrido = `${dias}d ${horas % 24}h ${minutos % 60}m ${segundos % 60}s`;
-            } else if (horas > 0) {
-                tempoDecorrido = `${horas}h ${minutos % 60}m ${segundos % 60}s`;
-            } else if (minutos > 0) {
-                tempoDecorrido = `${minutos}m ${segundos % 60}s`;
-            } else {
-                tempoDecorrido = `${segundos}s`;
-            }
-
-            element.textContent = tempoDecorrido;
+    <script>
+        // Formatar a data de abertura
+        document.addEventListener('DOMContentLoaded', function () {
+            const dataAbertura = document.getElementById('dataAbertura');
+            const data = new Date(dataAbertura.textContent);
+            const options = { day: 'numeric', month: 'numeric', year: 'numeric' };
+            const dataFormatada = data.toLocaleDateString('pt-BR', options);
+            dataAbertura.textContent = dataFormatada;
         });
-    });
-</script>
+    </script>
+    <script>
+        // Calcular tempo decorrido desde a criação para cada elemento
+        document.addEventListener('DOMContentLoaded', function () {
+            const dataAberturaTableElements = document.querySelectorAll('.dataAberturaTable');
+
+            dataAberturaTableElements.forEach(element => {
+                const dataHoraCriacao = new Date(element.textContent);
+
+                const diff = new Date() - dataHoraCriacao;
+                const segundos = Math.floor(diff / 1000);
+                const minutos = Math.floor(segundos / 60);
+                const horas = Math.floor(minutos / 60);
+                const dias = Math.floor(horas / 24);
+
+                let tempoDecorrido = '';
+
+                if (dias > 0) {
+                    tempoDecorrido = `${dias}d ${horas % 24}h ${minutos % 60}m ${segundos % 60}s`;
+                } else if (horas > 0) {
+                    tempoDecorrido = `${horas}h ${minutos % 60}m ${segundos % 60}s`;
+                } else if (minutos > 0) {
+                    tempoDecorrido = `${minutos}m ${segundos % 60}s`;
+                } else {
+                    tempoDecorrido = `${segundos}s`;
+                }
+
+                element.textContent = tempoDecorrido;
+            });
+        });
+    </script>
 
 
 </body>
