--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -99,74 +99,81 @@
         .modal-content .modal-info p {
             margin: 0;
         }
-        
-    #modal-alert {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 1050;
-    transition: transform 0.5s ease-in-out;
-    background-color: #fff; /* Alterado para branco */
-    width: 300px;
-    max-width: 90%;
-    padding: 1.2rem;
-    border-radius: .5rem;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Adicionado sombra */
-}
 
-.modal-alert-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
-}
+        #modal-alert {
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1050;
+            transition: transform 0.5s ease-in-out;
+            background-color: #fff;
+            /* Alterado para branco */
+            width: 300px;
+            max-width: 90%;
+            padding: 1.2rem;
+            border-radius: .5rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* Adicionado sombra */
+        }
 
-.modal-alert-footer {
-    display: flex; /* Utiliza flexbox para alinhar os botões na mesma linha */
-     /* Distribui os elementos igualmente */
-    margin-top: 1.5rem; /* Espaçamento acima dos botões */
-}
+        .modal-alert-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+            margin-bottom: 1rem;
+            padding-bottom: 1rem;
+        }
 
-#modal-alert-nao{
-    margin-left: 2rem;
-}
+        .modal-alert-footer {
+            display: flex;
+            /* Utiliza flexbox para alinhar os botões na mesma linha */
+            /* Distribui os elementos igualmente */
+            margin-top: 1.5rem;
+            /* Espaçamento acima dos botões */
+        }
 
-.modal-alert-footer button {
-    flex: 1; /* Faz com que os botões ocupem o mesmo espaço */
-    margin-left: 0.5rem; /* Espaçamento entre os botões */
-}
+        #modal-alert-nao {
+            margin-left: 2rem;
+        }
 
-#modal-alert.hide-modal-alert {
-    opacity: 0;
-    pointer-events: none; /* Impede cliques quando oculto */
-}
+        .modal-alert-footer button {
+            flex: 1;
+            /* Faz com que os botões ocupem o mesmo espaço */
+            margin-left: 0.5rem;
+            /* Espaçamento entre os botões */
+        }
+
+        #modal-alert.hide-modal-alert {
+            opacity: 0;
+            pointer-events: none;
+            /* Impede cliques quando oculto */
+        }
     </style>
 </head>
 
 <body class="sb-nav-fixed">
     <div id="fade">
-        
-                <!-- Modal de alerta -->
-                <div id="modal-alert" class="hide-modal-alert">
-                    <div class="modal-alert-header">
-                        Confirmação
-                    </div>
-                    <div class="modal-alert-body">
-                        Deseja finalizar esse chamado?
-                    </div>
-                    <div class="modal-alert-footer">
-                        <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
-                            <input type="hidden" name="novoStatus" value="finalizado" />
-                            <button type="submit" class="btn btn-primary">Sim</button>
-                        </form>
-                        <form action="">       
-                             <button id="modal-alert-nao" class="btn btn-primary">Não</button>
-                        </form>
-                    </div>
-                </div>
+
+        <!-- Modal de alerta -->
+        <div id="modal-alert" class="hide-modal-alert">
+            <div class="modal-alert-header">
+                Confirmação
+            </div>
+            <div class="modal-alert-body">
+                Deseja finalizar esse chamado?
+            </div>
+            <div class="modal-alert-footer">
+                <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
+                    <input type="hidden" name="novoStatus" value="finalizado" />
+                    <button type="submit" class="btn btn-primary">Sim</button>
+                </form>
+                <form action="">
+                    <button id="modal-alert-nao" class="btn btn-primary">Não</button>
+                </form>
+            </div>
+        </div>
 
         <div id="modal">
             <div class="modal-header">
@@ -261,37 +268,40 @@
                             </div>
                         </div>
                     </div>
-            <div th:if="${isAdmin}">
+                    <div th:if="${isAdmin}">
                         <h2 th:if="${isAdmin}">CAMPO ADMINSTRADOR</h2>
-                    
-                </div>
-                <div th:if="${isAdmin}" class="modal-footer">
 
-                    <div th:if="${chamado.status == 'aberto'}">
-                        <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
-                            <input type="hidden" name="novoStatus" value="andamento" /> 
-                            <button type="submit" class="btn btn-primary"
-                                style="background-color: rgb(0, 255, 132);">Atender</button>
-                        </form>
                     </div>
-                    <div th:if="${chamado.status == 'andamento'}">
-                        <div>
+                    <div th:if="${isAdmin}" class="modal-footer">
+
+                        <div th:if="${chamado.status == 'aberto'}">
                             <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
-                                <div class="enviar-mensagem">
-                                    <label>Responder Chamado</label>
-                                    <input type="text" name="newRespoAdmin" placeholder="enviar" value="">
-                                    <button type="submit" class="btn btn-primary" style="background-color: rgb(55, 255, 0);">Enviar</button>
-                                </div>
+                                <input type="hidden" name="novoStatus" value="andamento" />
+                                <button type="submit" class="btn btn-primary"
+                                    style="background-color: rgb(0, 255, 132);">Atender</button>
                             </form>
                         </div>
-                        <div class="finalizar" th:if="${newRespoAdminExists}">
-                            <button class="btn btn-primary" id="open-modal-alert" style="background-color: rgb(255, 0, 0);">Finalizar</button>
+                        <div th:if="${chamado.status == 'andamento' }">
+                            <div>
+                                <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
+                                    <div th:if="${isRespoAdminEmpty}" class="enviar-mensagem">
+                                        <label>Responder Chamado</label>
+                                        <input type="text" name="newRespoAdmin" placeholder="enviar" value="">
+                                        <button type="submit" class="btn btn-primary"
+                                            style="background-color: rgb(55, 255, 0);">Enviar</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="finalizar" th:unless="${isRespoAdminEmpty}">
+                                <button class="btn btn-primary" id="open-modal-alert"
+                                    style="background-color: rgb(255, 0, 0);">Finalizar</button>
+                            </div>
                         </div>
-                    </div>               
+                    </div>
                 </div>
             </div>
-            </div>
         </div>
+    </div>
     </div>
 
 
@@ -461,29 +471,29 @@
     </div>
     </div>
     <script>
-document.addEventListener('DOMContentLoaded', function () {
-    const openModalButton = document.querySelector("#open-modal-alert");
-    const closeModalButton = document.querySelector("#modal-alert-nao");
-    const modalAlert = document.querySelector("#modal-alert");
+        document.addEventListener('DOMContentLoaded', function () {
+            const openModalButton = document.querySelector("#open-modal-alert");
+            const closeModalButton = document.querySelector("#modal-alert-nao");
+            const modalAlert = document.querySelector("#modal-alert");
 
-    const toggleModalAlert = () => {
-        modalAlert.classList.toggle("hide-modal-alert");
-        document.body.classList.toggle("modal-open"); // Adiciona classe para desativar scroll de fundo
-    };
+            const toggleModalAlert = () => {
+                modalAlert.classList.toggle("hide-modal-alert");
+                document.body.classList.toggle("modal-open"); // Adiciona classe para desativar scroll de fundo
+            };
 
-    // Event listeners para abrir e fechar o modal de alerta
-    openModalButton.addEventListener("click", toggleModalAlert);
-    closeModalButton.addEventListener("click", toggleModalAlert);
+            // Event listeners para abrir e fechar o modal de alerta
+            openModalButton.addEventListener("click", toggleModalAlert);
+            closeModalButton.addEventListener("click", toggleModalAlert);
 
-    // Event listener para o botão "Sim" do modal de alerta
-    const modalAlertSimButton = document.querySelector("#modal-alert-sim");
-    modalAlertSimButton.addEventListener("click", function () {
-        // Aqui você pode adicionar a lógica para finalizar o chamado
-        console.log("Chamado finalizado!");
-        // Exemplo: window.location.href = "/finalizarChamado";
-        toggleModalAlert(); // Fecha o modal após finalizar
-    });
-});
+            // Event listener para o botão "Sim" do modal de alerta
+            const modalAlertSimButton = document.querySelector("#modal-alert-sim");
+            modalAlertSimButton.addEventListener("click", function () {
+                // Aqui você pode adicionar a lógica para finalizar o chamado
+                console.log("Chamado finalizado!");
+                // Exemplo: window.location.href = "/finalizarChamado";
+                toggleModalAlert(); // Fecha o modal após finalizar
+            });
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
