--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -283,12 +283,11 @@
                         </div>
                         <div th:if="${chamado.status == 'andamento' }">
                             <div>
-                                <form th:action="@{/update/{id}(id=${chamado.id})}" method="post">
+                                <form th:action="@{/update/{id}(id=${chamado.id})}" method="post" id="updateForm" onsubmit="submitForm(event)">
                                     <div th:if="${isRespoAdminEmpty}" class="enviar-mensagem">
                                         <label>Responder Chamado</label>
                                         <input type="text" name="newRespoAdmin" placeholder="enviar" value="">
-                                        <button type="submit" class="btn btn-primary"
-                                            style="background-color: rgb(55, 255, 0);">Enviar</button>
+                                        <button type="submit" class="btn btn-primary" style="background-color: rgb(55, 255, 0);">Enviar</button>
                                     </div>
                                 </form>
                             </div>
@@ -470,6 +469,29 @@
         </div>
     </div>
     </div>
+    <script>
+        function submitForm(event) {
+            event.preventDefault(); // Previne o envio padrão do formulário
+    
+            const form = document.getElementById('updateForm');
+            const formData = new FormData(form);
+    
+            fetch(form.action, {
+                method: form.method,
+                body: formData
+            })
+            .then(response => {
+                if (response.ok) {
+                    // Recarrega a página após o envio bem-sucedido
+                    window.location.reload();
+                } else {
+                    console.error('Erro ao enviar formulário:', response.statusText);
+                }
+            })
+            .catch(error => console.error('Erro inesperado:', error));
+        }
+    </script>
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const openModalButton = document.querySelector("#open-modal-alert");
