--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -172,7 +172,7 @@
                             </div>
                             
                             <h1 class="listada"th:if="${isAdmin}">Todos Chamados</h1>
-                            <h1 class="listada"th:if="${!isAdmin}">Seus Chamdos</h1>
+                            <h1 class="listada"th:if="${!isAdmin}">Meus Chamados</h1>
                             <div class="table-responsive">
                                 <table class="table table-striped">
                                     <thead>
