--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -14,6 +14,7 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
     <style>
+        
         @keyframes fadeIn {
             0% {
                 opacity: 0;
@@ -30,6 +31,10 @@
             animation: fadeIn 0.6s ease-in-out forwards;
             /* ajuste a duração e a função de temporização conforme necessário */
         }
+        .finalizado {
+    background-color: #f2f2f2; /* Cinza claro */
+    color: #999; /* Texto cinza */
+}
 
         /* Estilos para a barra de pesquisa */
         .search-bar {
