--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -428,7 +428,7 @@
                         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="/chamado"><i class="fa-solid fa-plus"
+                                <a class="nav-link" href="/colaborador"><i class="fa-solid fa-address-card"
                                         style="margin-right: 10px;"></i>Novo chamado</a>
                                 <a class="nav-link" href="/consultar"><i class="fa-solid fa-magnifying-glass"
                                         style="margin-right: 10px;"></i>Consultar chamado</a>
